# cargo-delenda

./: .gitignore  Cargo.toml  LICENSE  README.md
site/: screenshot.py  social-card.html
src/: main.rs
