[package]
name = "cargo-delenda"
version = "0.1.0"
edition = "2024"
authors = ["Nikhil Jha <oss@nikhiljha.com>"]
description = "Carthago delenda est. So is your target folder."
license = "MIT"
repository = "https://github.com/nikhiljha/cargo-delenda"
keywords = ["cargo", "clean", "delenda", "carthage"]
categories = ["development-tools::cargo-plugins"]

[dependencies]
